--- a/photos/index.html
+++ b/photos/index.html
@@ -391,10 +391,10 @@
     </div>
 
     <div class="certificate-viewer">
-      <img id="js-cert" src="jscert.png" alt="JavaScript Certificate">
-      <img id="java-cert" src="javacert.png" alt="Java Certificate">
-      <img id="sql-cert" src="sqlcert.png" alt="SQL Certificate">
-      <img id="python-cert" src="pythoncert.png" alt="Python Certificate">
+      <img id="js-cert" src="photos/jscert.png" alt="JavaScript Certificate">
+      <img id="java-cert" src="photos/javacert.png" alt="Java Certificate">
+      <img id="sql-cert" src="photos/sqlcert.png" alt="SQL Certificate">
+      <img id="python-cert" src="photos/pythoncert.png" alt="Python Certificate">
     </div>
   </section>
 
