--- a/index.html
+++ b/index.html
@@ -404,7 +404,7 @@
     <h2>Projects</h2>
     <div class="projects">
       <div class="project">
-        <img src="Screenshot 2025-08-27 at 12.49.28 PM.png" alt="Project 1">
+        <img src="photos/a1.png" alt="Project 1">
         <div class="project-content">
           <h3>Flipping A Coin</h3>
           <p>A website which flips as many coins as you want and generates random result.</p>
@@ -413,7 +413,7 @@
       </div>
       
       <div class="project">
-        <img src="Screenshot 2025-08-27 at 12.50.58 PM.png" alt="Project 2">
+        <img src="photos/uninav.png" alt="Project 2">
         <div class="project-content">
           <h3>Manipal UniNav Map</h3>
           <p>A website made for manipal students to navigate through their campus.</p>
@@ -421,7 +421,7 @@
         </div>
       </div>
       <div class="project">
-        <img src="Screenshot 2025-08-27 at 12.52.45 PM.png" alt="Project 3">
+        <img src="photos/s2.png" alt="Project 3">
         <div class="project-content">
           <h3>Spin Roulette</h3>
           <p>A website where you can spin the roulette and try to win in the least number of chances</p>
