--- a/index.html
+++ b/index.html
@@ -421,7 +421,7 @@
         </div>
       </div>
       <div class="project">
-        <img src="photos/s2.png" alt="Project 3">
+        <img src="photos/a2.png" alt="Project 3">
         <div class="project-content">
           <h3>Spin Roulette</h3>
           <p>A website where you can spin the roulette and try to win in the least number of chances</p>
