--- a/index.html
+++ b/index.html
@@ -394,7 +394,7 @@
     <img src="photos/AS (2).png" alt="Logo" class="logo">
     <h1 class="title">Anmol Srivastava</h1>
   </div>
-  <span class="hamburger" onclick="openSidebar()">☰</span>
+  <span class="hamburger" onclick="toggleSidebar()">☰</span>
 </header>
 
   <!-- Sidebar -->
