--- a/index.html
+++ b/index.html
@@ -408,15 +408,18 @@
   <!-- Hero -->
   <section class="hero">
     <h2>Hello, I'm Anmol Srivastava!</h2>
-    <p>Crafting Modern, Responsive, and Scalable Web Experiences</p>
+    <p>Curious developer passionate about building projects and learning new technologies</p>
     <button onclick="document.getElementById('contact').scrollIntoView({behavior:'smooth'})">Contact Me</button>
   </section>
 
   <!-- About -->
   <section id="about">
     <h2>About Me</h2>
-    <p>I am a dedicated developer skilled in creating responsive and modern websites. 
-       My focus is on delivering high-quality designs and seamless user experiences.</p>
+    <p>Hi, I’m Anmol Srivastava — a passionate developer with a strong foundation in programming and problem-solving. I have hands-on experience in Java, C++, Python, HTML, CSS, JavaScript, and MySQL, and I’m constantly exploring new technologies to expand my skillset.
+
+I enjoy building projects that bring ideas to life, whether it’s a dynamic web application, a problem-solving tool, or an interactive experiment. My journey in tech is driven by curiosity and a desire to keep learning, improving, and creating impactful solutions.
+
+When I’m not coding, you’ll probably find me exploring new frameworks, refining my existing projects, or brainstorming fresh ideas to challenge myself.</p>
   </section>
 
   <!-- Skills -->
