--- a/index.html
+++ b/index.html
@@ -491,7 +491,7 @@ header h1:hover {
   <!-- Hero -->
   <section class="hero">
     <h2>Hello, I'm Anmol Srivastava!</h2>
-    <p>Curious developer passionate about building projects and learning new technologies</p>
+    <p>Curious developer passionate about building projects and learning new technologies!</p>
     <button onclick="document.getElementById('contact').scrollIntoView({behavior:'smooth'})">Contact Me</button>
   </section>
 
