--- a/index.html
+++ b/index.html
@@ -237,6 +237,53 @@
   cursor: pointer;
 }
 
+
+    #education {
+  padding: 80px 20px;
+  max-width: 1000px;
+  margin: auto;
+}
+
+.education-container {
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+}
+
+.education-item {
+  display: flex;
+  align-items: center;
+  background: rgba(255,255,255,0.05);
+  padding: 20px 25px;
+  border-left: 4px solid #ffcc70;
+  border-radius: 10px;
+  gap: 20px;
+  transition: transform 0.3s, background 0.3s;
+}
+
+.education-item:hover {
+  transform: translateX(8px);
+  background: rgba(255,204,112,0.1);
+}
+
+.education-logo {
+  width: 60px;
+  height: 60px;
+  object-fit: contain;
+  border-radius: 50%;
+  box-shadow: 0 4px 12px rgba(0,0,0,0.3);
+}
+
+.education-text h3 {
+  margin-bottom: 6px;
+}
+
+.education-text p {
+  font-size: 0.95rem;
+  opacity: 0.9;
+}
+
+
     @keyframes fadeInUp {
       from { opacity: 0; transform: translateY(40px); }
       to { opacity: 1; transform: translateY(0); }
@@ -504,7 +551,32 @@ I enjoy building projects that bring ideas to life, whether it’s a dynamic web
 
 When I’m not coding, you’ll probably find me exploring new frameworks, refining my existing projects, or brainstorming fresh ideas to challenge myself.</p>
   </section>
-
+  <section id="education">
+  <h2>Education</h2>
+  <div class="education-container">
+    <div class="education-item">
+      <img src="photos/manipal-logo.png" alt="Manipal University Logo" class="education-logo">
+      <div class="education-text">
+        <h3>Manipal University</h3>
+        <p>Bachelor of Technology in Computer Science (2021 - 2025)</p>
+      </div>
+    </div>
+    <div class="education-item">
+      <img src="photos/xyz-school-logo.png" alt="XYZ Senior Secondary School Logo" class="education-logo">
+      <div class="education-text">
+        <h3>XYZ Senior Secondary School</h3>
+        <p>High School (2019 - 2021)</p>
+      </div>
+    </div>
+    <div class="education-item">
+      <img src="photos/abc-school-logo.png" alt="ABC Junior School Logo" class="education-logo">
+      <div class="education-text">
+        <h3>ABC Junior School</h3>
+        <p>Middle & High School (2015 - 2019)</p>
+      </div>
+    </div>
+  </div>
+</section>
   <!-- Skills -->
   <section id="skills">
     <h2>Skills</h2>
@@ -658,7 +730,16 @@ When I’m not coding, you’ll probably find me exploring new frameworks, refin
   } else {
     sidebar.style.width = "250px";
   }
-}
+}   
+    const sections = document.querySelectorAll("section");
+const showSection = () => {
+  sections.forEach(sec => {
+    const top = sec.getBoundingClientRect().top;
+    if (top < window.innerHeight - 100) sec.classList.add("show");
+  });
+};
+window.addEventListener("scroll", showSection);
+showSection();
     
     form.addEventListener('submit', function(e){
       e.preventDefault();
