--- a/index.html
+++ b/index.html
@@ -183,21 +183,21 @@ When I’m not coding, you’ll probably find me exploring new frameworks, refin
     <h2>Education</h2>
     <div class="education-container">
       <div class="education-item">
-        <img src="photos/manipal-logo.png" alt="Manipal University Logo" class="education-logo">
+        <img src="photos/manipallogo.png" alt="Manipal University Logo" class="education-logo">
         <div class="education-text">
           <h3>Manipal University</h3>
           <p>Bachelor of Technology in Computer Science(2025 - 2029)</p>
         </div>
       </div>
       <div class="education-item">
-        <img src="photos/xyz-school-logo.png" alt="XYZ Senior Secondary School Logo" class="education-logo">
+        <img src="photos/mpvmlogo.png" alt="XYZ Senior Secondary School Logo" class="education-logo">
         <div class="education-text">
           <h3>Maharshi Patanjali Vidya Mandir</h3>
           <p>Intermediate(2018 - 2025)</p>
         </div>
       </div>
       <div class="education-item">
-        <img src="photos/abc-school-logo.png" alt="ABC Junior School Logo" class="education-logo">
+        <img src="photos/rishikullogo.jpeg" alt="ABC Junior School Logo" class="education-logo">
         <div class="education-text">
           <h3>Patanjali Rishikul</h3>
           <p>Junior and Middle School(2014 - 2018)</p>
