--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
     #education { padding: 80px 20px; max-width: 1000px; margin: auto; }
     .education-container { display: flex; flex-direction: column; gap: 20px; }
     .education-item { display: flex; align-items: center; background: rgba(255,255,255,0.05); padding: 20px 25px; border-left: 4px solid #ffcc70; border-radius: 10px; gap: 20px; transition: transform 0.3s, background 0.3s; }
-    .education-item:hover { transform: translateX(8px); background: rgba(255,204,112,0.1); }
+    .education-item:hover { background: rgba(255,204,112,0.1); }
     .education-logo { width: 60px; height: 60px; object-fit: contain; border-radius: 50%; box-shadow: 0 4px 12px rgba(0,0,0,0.3); }
     .education-text h3 { margin-bottom: 6px; }
     .education-text p { font-size: 0.95rem; opacity: 0.9; }
