--- a/index.html
+++ b/index.html
@@ -186,8 +186,8 @@ When I’m not coding, you’ll probably find me exploring new frameworks, refin
         <img src="photos/manipallogo.png" alt="Manipal University Logo" class="education-logo">
         <div class="education-text">
           <h3>Manipal University</h3>
-          <p>Bachelor of Technology in Computer Science(2025 - 2029) 
-            📍Jaipur, Rajasthan</p>
+          <p>Bachelor of Technology in Computer Science(2025 - 2029) </p>
+          <p>📍Jaipur, Rajasthan</p>
           
         </div>
       </div>
@@ -195,10 +195,10 @@ When I’m not coding, you’ll probably find me exploring new frameworks, refin
         <img src="photos/mpvmlogo.png" alt="XYZ Senior Secondary School Logo" class="education-logo">
         <div class="education-text">
           <h3>Maharshi Patanjali Vidya Mandir</h3>
-          <p>Intermediate(2018 - 2025)
-          Achieved excellent results throughout my school years,
-          with a strong foundation in core subjects.
-          📍Prayagraj, Uttar Pradesh
+          <p>Intermediate(2018 - 2025)</p>
+          <p>Achieved excellent results throughout my school years,
+          with a strong foundation in core subjects.</p>
+          <p>📍Prayagraj, Uttar Pradesh</p>
           </p>
         </div>
       </div>
@@ -206,10 +206,10 @@ When I’m not coding, you’ll probably find me exploring new frameworks, refin
         <img src="photos/rishikullogo.jpeg" alt="ABC Junior School Logo" class="education-logo">
         <div class="education-text">
           <h3>Patanjali Rishikul</h3>
-          <p>Junior and Middle School(2014 - 2018)
-          Completed my schooling with strong academic results,
-          consistently maintaining good performance throughout.
-          📍Prayagraj, Uttar Pradesh
+          <p>Junior and Middle School(2014 - 2018)</p>
+          <p>Completed my schooling with strong academic results,
+          consistently maintaining good performance throughout.</p>
+          <p>📍Prayagraj, Uttar Pradesh
           </p>
         </div>
       </div>
