--- a/index.html
+++ b/index.html
@@ -211,8 +211,7 @@ When I’m not coding, you’ll probably find me exploring new frameworks, refin
           <p>📍Prayagraj, Uttar Pradesh
           </p><br>
           <p>Junior and Middle School(2014 - 2018)</p>
-          <p>Completed my schooling with strong academic results,
-          consistently maintaining good performance throughout.</p>
+          <p>Completed my schooling with strong academic results, maintaining good performance throughout.</p>
           
         </div>
       </div>
