--- a/index.html
+++ b/index.html
@@ -188,7 +188,7 @@ When I’m not coding, you’ll probably find me exploring new frameworks, refin
           <h3>Manipal University</h3>
           <p>📍Jaipur, Rajasthan</p><br>
           <p>Bachelor of Technology in Computer Science(2025 - 2029) </p>
-          <p>Currently pursuing my studies at MUJ, exploring opportunities in Computer Science and Engineering. Passionate about learning, building projects, and solving problems</p>
+          <p>Currently pursuing my studies at MUJ, exploring opportunities in Computer Science and Engineering.</p>
           
           
         </div>
