--- a/index.html
+++ b/index.html
@@ -345,13 +345,13 @@ When I’m not coding, you’ll probably find me exploring new frameworks, refin
 
       <div class="social-links">
   <a href="https://github.com/Anmol-Srivastava-073" target="_blank" class="social-btn github">
-    <img src="icons/github-white.png" alt="GitHub">
+    <img src="photos/gtb.png" alt="GitHub">
   </a>
   <a href="https://www.linkedin.com/in/anmol-srivastava-46430727a/" target="_blank" class="social-btn linkedin">
-    <img src="icons/linkedin-white.png" alt="LinkedIn">
+    <img src="photos/lkd.png" alt="LinkedIn">
   </a>
   <a href="https://www.instagram.com/anmol_sriv.073/" target="_blank" class="social-btn instagram">
-    <img src="icons/instagram-white.png" alt="Instagram">
+    <img src="photos/insta.png" alt="Instagram">
   </a>
 </div>
     </div>
