--- a/index.html
+++ b/index.html
@@ -121,17 +121,20 @@
     .contact-form input:focus + label, .contact-form input:not(:placeholder-shown) + label, .contact-form textarea:focus + label, .contact-form textarea:not(:placeholder-shown) + label { top: -12px; left: 14px; font-size: 0.82rem; color: #00f5d4; background: #0d0d12; border-radius: 6px; }
     .contact-form button { width: 100%; padding: 16px; background: linear-gradient(135deg, #00f5d4, #00bbf9, #9b5de5); background-size: 300% 300%; border: none; border-radius: 14px; font-size: 1.22rem; font-weight: 600; cursor: pointer; transition: 0.4s; color: #fff; animation: gradientFlow 6s ease infinite; }
     .contact-form button:hover { transform: translateY(-3px) scale(1.04); box-shadow: 0 8px 28px rgba(0, 245, 212, 0.65); }
-    .social-links {
+    /* Container */
+.social-links {
   margin-top: 35px;
   display: flex;
   justify-content: center;
   gap: 25px;
+  flex-wrap: wrap;
 }
 
+/* Button base style */
 .social-btn {
-  width: 70px;
-  height: 70px;
-  border-radius: 50%;
+  width: 70px;               /* Circle width */
+  height: 70px;              /* Circle height */
+  border-radius: 50%;        /* Make it circular */
   display: flex;
   justify-content: center;
   align-items: center;
@@ -139,30 +142,37 @@
   cursor: pointer;
   transition: all 0.3s ease;
   box-shadow: 0 4px 15px rgba(0,0,0,0.4);
+  background: #222;          /* fallback background */
 }
 
+/* Button logos */
 .social-btn img {
-  width: 40%; /* logo size inside button */
+  width: 40%;               /* Scale logo */
+  height: auto;
   transition: transform 0.3s ease;
 }
 
-.social-btn:hover img {
-  transform: scale(1.2);
-}
-
-.social-btn.github { background: #333; }
-.social-btn.linkedin { background: #0a66c2; }
-.social-btn.instagram {
-  background: radial-gradient(circle at 30% 107%, 
-                              #fdf497 0%, #fdf497 5%, 
-                              #fd5949 45%, #d6249f 60%, 
-                              #285AEB 90%);
-}
-
+/* Hover effects */
 .social-btn:hover {
   transform: translateY(-5px) scale(1.15);
   box-shadow: 0 10px 25px rgba(0,0,0,0.5);
 }
+
+/* Hover logo animation */
+.social-btn:hover img {
+  transform: scale(1.2);
+}
+
+/* Individual colors for brand consistency */
+.social-btn.github { background: #333; }             /* GitHub dark */
+.social-btn.linkedin { background: #0a66c2; }        /* LinkedIn blue */
+.social-btn.instagram { 
+  background: radial-gradient(circle at 30% 107%, 
+                              #fdf497 0%, #fdf497 5%, 
+                              #fd5949 45%, #d6249f 60%, 
+                              #285AEB 90%);     /* Instagram gradient */
+}
+
 
     /* Footer */
     footer { background: rgba(0,0,0,0.5); padding: 15px; text-align: center; margin-top: 40px; }
