--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
     .contact-form button { width: 100%; padding: 16px; background: linear-gradient(135deg, #00f5d4, #00bbf9, #9b5de5); background-size: 300% 300%; border: none; border-radius: 14px; font-size: 1.22rem; font-weight: 600; cursor: pointer; transition: 0.4s; color: #fff; animation: gradientFlow 6s ease infinite; }
     .contact-form button:hover { transform: translateY(-3px) scale(1.04); box-shadow: 0 8px 28px rgba(0, 245, 212, 0.65); }
     /* Container */
-.social-links {
+    .social-links {
   margin-top: 35px;
   display: flex;
   justify-content: center;
@@ -130,47 +130,37 @@
   flex-wrap: wrap;
 }
 
-/* Button base style */
 .social-btn {
-  width: 70px;               /* Circle width */
-  height: 70px;              /* Circle height */
-  border-radius: 50%;        /* Make it circular */
+  width: 70px;             /* Button size */
+  height: 70px;
+  border-radius: 50%;      /* Circle shape */
+  overflow: hidden;
+  cursor: pointer;
   display: flex;
   justify-content: center;
   align-items: center;
-  overflow: hidden;
-  cursor: pointer;
-  transition: all 0.3s ease;
+  transition: transform 0.3s ease, box-shadow 0.3s ease;
   box-shadow: 0 4px 15px rgba(0,0,0,0.4);
-  background: #222;          /* fallback background */
+  background: #222;         /* fallback color */
 }
 
-/* Button logos */
+/* Make the image fill the button */
 .social-btn img {
-  width: 40%;               /* Scale logo */
-  height: auto;
-  transition: transform 0.3s ease;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  transition: transform 0.3s ease, filter 0.3s ease;
 }
 
-/* Hover effects */
+/* Hover effect */
 .social-btn:hover {
   transform: translateY(-5px) scale(1.15);
   box-shadow: 0 10px 25px rgba(0,0,0,0.5);
 }
 
-/* Hover logo animation */
 .social-btn:hover img {
-  transform: scale(1.2);
-}
-
-/* Individual colors for brand consistency */
-.social-btn.github { background: #333; }             /* GitHub dark */
-.social-btn.linkedin { background: #0a66c2; }        /* LinkedIn blue */
-.social-btn.instagram { 
-  background: radial-gradient(circle at 30% 107%, 
-                              #fdf497 0%, #fdf497 5%, 
-                              #fd5949 45%, #d6249f 60%, 
-                              #285AEB 90%);     /* Instagram gradient */
+  transform: scale(1.1);
+  filter: brightness(1.2);  /* Slight brightness on hover */
 }
 
 
