--- a/index.html
+++ b/index.html
@@ -131,9 +131,9 @@
 }
 
 .social-btn {
-  width: 70px;             /* Button size */
+  width: 70px;
   height: 70px;
-  border-radius: 50%;      /* Circle shape */
+  border-radius: 50%;
   overflow: hidden;
   cursor: pointer;
   display: flex;
@@ -141,18 +141,18 @@
   align-items: center;
   transition: transform 0.3s ease, box-shadow 0.3s ease;
   box-shadow: 0 4px 15px rgba(0,0,0,0.4);
-  background: #222;         /* fallback color */
+  background: #222; /* fallback color */
 }
 
-/* Make the image fill the button */
+/* Make all logos fit the circle perfectly */
 .social-btn img {
-  width: 100%;
-  height: 100%;
-  object-fit: cover;
+  width: 80%;       /* Fill most of the button */
+  height: 80%;
+  object-fit: contain;  /* Maintain logo aspect ratio */
   transition: transform 0.3s ease, filter 0.3s ease;
 }
 
-/* Hover effect */
+/* Hover effects */
 .social-btn:hover {
   transform: translateY(-5px) scale(1.15);
   box-shadow: 0 10px 25px rgba(0,0,0,0.5);
@@ -160,9 +160,18 @@
 
 .social-btn:hover img {
   transform: scale(1.1);
-  filter: brightness(1.2);  /* Slight brightness on hover */
+  filter: brightness(1.2);
 }
 
+/* Optional: Individual background colors if needed */
+.social-btn.github { background: #333; }
+.social-btn.linkedin { background: #0a66c2; }
+.social-btn.instagram {
+  background: radial-gradient(circle at 30% 107%, 
+                              #fdf497 0%, #fdf497 5%, 
+                              #fd5949 45%, #d6249f 60%, 
+                              #285AEB 90%);
+}
 
     /* Footer */
     footer { background: rgba(0,0,0,0.5); padding: 15px; text-align: center; margin-top: 40px; }
