--- a/index.html
+++ b/index.html
@@ -144,11 +144,11 @@
   background: #222; /* fallback background */
 }
 
-/* Logo images centered and scaled */
+/* Logos completely fill the circle and stay centered */
 .social-btn img {
-  width: 60%;              /* scale logos to fit nicely */
-  height: 60%;
-  object-fit: contain;      /* preserve aspect ratio */
+  width: 100%;
+  height: 100%;
+  object-fit: cover;  /* fills button completely */
   display: block;
   transition: transform 0.3s ease, filter 0.3s ease;
 }
@@ -160,10 +160,9 @@
 }
 
 .social-btn:hover img {
-  transform: scale(1.2);
+  transform: scale(1.1);
   filter: brightness(1.2);
 }
-
 
 
     footer { background: rgba(0,0,0,0.5); padding: 15px; text-align: center; margin-top: 40px; }
