--- a/index.html
+++ b/index.html
@@ -228,7 +228,7 @@
 
 <!-- Background Music -->
 <audio id="bg-music" loop>
-  <source src="music/.mp3" type="audio/mpeg">
+  <source src="music/msc.mp3" type="audio/mp3">
 </audio>
 
   <!-- Navbar -->
