--- a/index.html
+++ b/index.html
@@ -27,10 +27,13 @@
   top: 0; left: 0;
   width: 100%; height: 100%;
   background: linear-gradient(135deg, #0f2027, #203a43, #2c5364);
-  display: flex; justify-content: center; align-items: center;
+  display: flex;
+  justify-content: center;
+  align-items: center;
   flex-direction: column;
   z-index: 5000;
   transition: opacity 1s ease, visibility 1s ease;
+  text-align: center;
 }
 
 #intro-overlay.hidden {
@@ -48,16 +51,45 @@
 }
 
 #enter-btn {
-  padding: 14px 35px;
-  border: none; border-radius: 30px;
-  background: linear-gradient(135deg, #ffcc70, #ff9a8b);
-  color: #111; font-size: 1.1rem; font-weight: 600;
+  padding: 16px 45px;
+  border: none;
+  border-radius: 50px;
+  background: linear-gradient(135deg, #ff9a8b, #ff6a00);
+  color: #fff;
+  font-size: 1.3rem;
+  font-weight: 600;
+  letter-spacing: 1px;
   cursor: pointer;
-  transition: transform 0.3s ease, box-shadow 0.3s ease;
+  text-transform: uppercase;
+  box-shadow: 0 6px 20px rgba(255,106,0,0.5);
+  transition: all 0.3s ease-in-out;
+  position: relative;
+  overflow: hidden;
 }
+
+/* Glowing hover */
 #enter-btn:hover {
-  transform: scale(1.1);
-  box-shadow: 0 8px 25px rgba(0,0,0,0.4);
+  transform: scale(1.12);
+  box-shadow: 0 8px 30px rgba(255,106,0,0.8);
+}
+
+/* Small pulse effect */
+#enter-btn::after {
+  content: "";
+  position: absolute;
+  top: -50%;
+  left: -50%;
+  width: 200%;
+  height: 200%;
+  background: radial-gradient(circle, rgba(255,255,255,0.3) 0%, transparent 70%);
+  transform: scale(0);
+  opacity: 0;
+  transition: transform 0.5s, opacity 0.5s;
+}
+
+#enter-btn:hover::after {
+  transform: scale(1);
+  opacity: 1;
 }
 
     .logo-name { display: flex; align-items: center; }
@@ -228,7 +260,7 @@
 
 <!-- Background Music -->
 <audio id="bg-music" loop>
-  <source src="music/msc.mp3" type="audio/mp3">
+  <source src="music/msc.mp3" type="audio/mpeg">
 </audio>
 
   <!-- Navbar -->
