--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 /* Button - premium glassy blue */
 #enter-btn {
   padding: 16px 50px;
-  border: none;
+  border: 2px;
   border-radius: 50px;
   background: linear-gradient(135deg, #1e3a8a, #2563eb, #38bdf8);
   color: #e0f2fe;
