--- a/index.html
+++ b/index.html
@@ -473,7 +473,8 @@ const bgMusic = document.getElementById("bg-music");
 
 enterBtn.addEventListener("click", () => {
   overlay.classList.add("hidden");
-  bgMusic.muted = false;   // unmute on user click
+  bgMusic.muted = false;  
+  bgMusic.currentTime = 4.5;// unmute on user click
   bgMusic.volume = 0.3;    // set volume to 30%
   bgMusic.play().then(() => {
     console.log("Music started at 30% volume!");
